--- a/Parts_needed.html
+++ b/Parts_needed.html
@@ -1,5 +1,4 @@
-1 Chassis
----
-- Helmet
-- Breastplate
-- Shin guards
+<html>
+<h1> This is my first page with GitHub Pages </h1>
+<p>Thanks GitHub!</p>
+</html>
